# One-Weekend-Raytracer

./: .gitignore  CMakeLists.txt  README.md
include/: camera.hpp  hittable.hpp  line.hpp  material.hpp  materials.hpp  plan.hpp  random.hpp  ray.hpp  render_plan.hpp  scene.hpp  shapes.hpp  sphere.hpp  texture.hpp  types.hpp  world.hpp
include/bounding_volume_hierarchy/: axis_aligned_bounding_box.hpp  bounding_volume_hierarchy_node.hpp
include/material/: dielectric.hpp  diffuse_light.hpp  lambertian.hpp  metal.hpp
include/math/: sphere.hpp  transform.hpp
include/renderer/: cpu.hpp  vulkan.hpp
include/scene_definitions_for_vulkan/: materials.hpp  render_plan.hpp  scene.hpp  shapes.hpp  textures.hpp
include/shape/: ball.hpp  sphere.hpp
include/texture/: checker.hpp  constant.hpp  image.hpp  noise.hpp
include/util/: colors.hpp  interpolation.hpp  noise.hpp  numeric_types.hpp  pairs.hpp  random.hpp  sizes.hpp  string.hpp  types.hpp  vector_types.hpp  vk_mem_alloc.hpp  vk_single_time_commands.hpp
shaders/: raytracer.comp  raytracer.comp.spv
src/: camera.cpp  line.cpp  main.cpp  material.cpp  plan.cpp  ray.cpp  render_plan.cpp  scene.cpp  sphere.cpp  world.cpp
src/bounding_volume_hierarchy/: axis_aligned_bounding_box.cpp  bounding_volume_hierarchy_node.cpp
src/material/: dielectric.cpp  diffuse_light.cpp  lambertian.cpp  metal.cpp
src/math/: transform.cpp
src/renderer/: cpu.cpp  vulkan.cpp
src/scene_definitions_for_vulkan/: render_plan.cpp  scene.cpp
src/shape/: ball.cpp  sphere.cpp
src/texture/: checker.cpp  constant.cpp  image.cpp  noise.cpp
src/util/: noise.cpp  vk_single_time_commands.cpp
